nav actually represents what's active

--- a/app/views/home/parents.html.erb
+++ b/app/views/home/parents.html.erb
@@ -1,5 +1,7 @@
-<h1>Hey Parents!</h1>
-<p> Having your child establish healthy eating habits is important for them to grow into their full potential as adults. Make sure your all-star is getting the nutrition he or she needs, even when you’re not around. Tomato’s goal is to teach children everything they need to know about proper nutrition to get them on the right path to maintaining lifelong healthy eating habits. We do this through educating your child on the different food groups, proper serving sizes, and balanced meals. We want your child to be able to plan their own balanced daily meals. This means they can make the right decisions in the school cafeteria! </p>
-<br/>
+<div id="parents-div">
+  <h1>Hey Parents!</h1>
+  <p> Having your child establish healthy eating habits is important for them to grow into their full potential as adults. Make sure your all-star is getting the nutrition he or she needs, even when you’re not around. Tomato’s goal is to teach children everything they need to know about proper nutrition to get them on the right path to maintaining lifelong healthy eating habits. We do this through educating your child on the different food groups, proper serving sizes, and balanced meals. We want your child to be able to plan their own balanced daily meals. This means they can make the right decisions in the school cafeteria! </p>
+  <br/>
 
-<p>We understand how busy life can be and that it can sometimes be difficult to motivate kids to learn how to eat properly. We’re want to help you out. We have in our system virtual Cookies which your child can earn. You will be notified whenever your child completes a lesson, where you can then give them a virtual Cookie. They can spend these virtual Cookies on things that you have pre-approved in our shop. Examples are: a real cookie, a Capri Sun, or a pack of Pokemon cards.  </p>
+  <p>We understand how busy life can be and that it can sometimes be difficult to motivate kids to learn how to eat properly. We’re want to help you out. We have in our system virtual Cookies which your child can earn. You will be notified whenever your child completes a lesson, where you can then give them a virtual Cookie. They can spend these virtual Cookies on things that you have pre-approved in our shop. Examples are: a real cookie, a Capri Sun, or a pack of Pokemon cards.  </p>
+</div>
