--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Test Homepage!</h1>
-<p>We'll put pretty knowledge graphs here in the future</p>
-<br/>
-<p>Head over to your main <a href="<%= user_path(current_user) %>">skills page</a> to get started, or click on Kids or Parents to Learn More</p>
+<div id="home-div">
+  <h1>Test Homepage!</h1>
+  <p>We'll put pretty knowledge graphs here in the future</p>
+  <br/>
+  <p>Head over to your main <a href="<%= user_path(current_user) %>">skills page</a> to get started, or click on Kids or Parents to Learn More</p>
+</div>
